--- a/src/app/reward/reward.page.html
+++ b/src/app/reward/reward.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>records</ion-title>
+    <ion-title>reward</ion-title>
   </ion-toolbar>
 </ion-header>
 
