--- a/src/app/photo/item-modal/item-modal.page.html
+++ b/src/app/photo/item-modal/item-modal.page.html
@@ -1,9 +1,42 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>ItemModal</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content padding>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        How much do you eat?
+      </ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-row>
+        <ion-col size="6">
+          <ion-item>{{ quantity }}</ion-item>
+        </ion-col>
+        <!-- <ion-label position="stacked">Quantity</ion-label> -->
+        <ion-col size="6">
+          <ion-button (click)="openSelector()">Quantity</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-item-divider></ion-item-divider>
+      <ion-row>
+        <ion-col>
+          <ion-label>Unit</ion-label>
+          <ion-input [(ngModel)]="unit" placeholder="Unit"></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row no-padding>
+        <ion-col size="6">
+          <ion-button expand="full" color="danger" (click)="close()">
+            <ion-icon name="close" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button expand="full" color="success" (click)="return()">
+            <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
