--- a/src/app/photo/photo.page.html
+++ b/src/app/photo/photo.page.html
@@ -1,9 +1,70 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>photo</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Take A Picture</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
+
+  <div style="display:flex; flex-direction: column; justify-content: center">
+    <ion-button expand="full" (click)="capture(1)">Ttake a picture</ion-button>
+    <ion-button expand="full" (click)="capture(0)">Select a picture</ion-button>
+    <ion-button expand="full" (click)="getNutrition()">Select from browser</ion-button>
+  </div>
+
+  <ion-card *ngIf="imageLabels.length > 0">
+    <img src="{{ imageUrl }}" height="360 px" width="120 px" />
+    <ion-card-header *ngIf="itemString != ''">
+      <ion-card-title>{{ itemString }}</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content *ngIf="itemString === ''">
+      <!-- <h2 style="text-align:center">{{ itemName }} ?</h2> -->
+      <!-- select label from vision results -->
+      <ion-item>
+        <ion-label>Label</ion-label>
+        <ion-select [(ngModel)]="itemName" placeholder="Select One" required>
+          <ion-select-option *ngFor="let label of imageLabels" value="{{ label.description }}">
+            {{ label.description }}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <ion-row no-padding>
+        <ion-col size="6">
+          <ion-button expand="full" color="danger" (click)="close()">
+            <ion-icon name="close" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button expand="full" color="success" (click)="openModal()">
+            <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+
+    <ion-card-content *ngIf="nutritionResult != null">
+      <ion-list>
+        <ion-row>
+          <ion-col size="6">Saturated Fat</ion-col>
+          <ion-col size="3">{{ nutritionResult.nf_saturated_fat }}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6">Suggars</ion-col>
+          <ion-col size="3">{{ nutritionResult.nf_sugars }}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6">Protein</ion-col>
+          <ion-col size="3">{{ nutritionResult.nf_protein }}</ion-col>
+        </ion-row>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+
 
 </ion-content>
