--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,62 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
+
+        <ion-list *ngIf="isLoggedin">
+          <ion-list-header>
+            Account
+          </ion-list-header>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="/account">
+              <ion-icon slot="start" name="person"></ion-icon>
+              <ion-label>
+                Account
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="/support">
+              <ion-icon slot="start" name="help"></ion-icon>
+              <ion-label>
+                Support
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle auto-hide="false">
+            <ion-item button (click)="onLogout()" routerLink="/home">
+              <ion-icon slot="start" name="log-out"></ion-icon>
+              <ion-label>
+                Logout
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+
+        <ion-list *ngIf="!isLoggedin">
+          <ion-list-header>
+            Account
+          </ion-list-header>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="/login">
+              <ion-icon slot="start" name="log-in"></ion-icon>
+              <ion-label>
+                Login
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="/signup">
+              <ion-icon slot="start" name="person-add"></ion-icon>
+              <ion-label>
+                Signup
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+
       </ion-content>
     </ion-menu>
     <ion-router-outlet main></ion-router-outlet>
