--- a/src/app/history/history-detail/history-detail.page.html
+++ b/src/app/history/history-detail/history-detail.page.html
@@ -14,75 +14,55 @@
     </ion-card-header>
     <ion-card-content>
       <ion-list>
-        
-          <ion-row>
-            <ion-col>Calcium</ion-col>
-            <ion-col>{{ nutrients[0].value }}</ion-col>
-          </ion-row>
-        
 
-        
-          <ion-row>
-            <ion-col>Copper</ion-col>
-            <ion-col>{{ nutrients[1].value }}</ion-col>
-          </ion-row>
-        
+        <ion-row>
+          <ion-col>Protein</ion-col>
+          <ion-col>{{ nutrients[0].value }}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>Fat</ion-col>
+          <ion-col>{{ nutrients[1].value }}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>Calories</ion-col>
+          <ion-col>{{ nutrients[2].value }}</ion-col>
+        </ion-row>
 
-        
-          <ion-row>
-            <ion-col>Folic Acid</ion-col>
-            <ion-col>{{ nutrients[2].value }}</ion-col>
-          </ion-row>
-        
 
-        
-          <ion-row>
-            <ion-col>Iron</ion-col>
-            <ion-col>{{ nutrients[4].value }}</ion-col>
-          </ion-row>
-        
 
-        
-          <ion-row>
-            <ion-col>Magnesium</ion-col>
-            <ion-col>{{ nutrients[4].value }}</ion-col>
-          </ion-row>
-        
+        <ion-row>
+          <ion-col>Zinc</ion-col>
+          <ion-col>{{ nutrients[3].value }}</ion-col>
+        </ion-row>
 
-        
-          <ion-row>
-            <ion-col>Niacin</ion-col>
-            <ion-col>{{ nutrients[5].value }}</ion-col>
-          </ion-row>
-        
 
-        
-          <ion-row>
-            <ion-col>Vitamin A</ion-col>
-            <ion-col>{{ nutrients[8].value }}</ion-col>
-          </ion-row>
-        
 
-        
-          <ion-row>
-            <ion-col>Vitamin C</ion-col>
-            <ion-col>{{ nutrients[7].value }}</ion-col>
-          </ion-row>
-        
+        <ion-row>
+          <ion-col>Vitamin A</ion-col>
+          <ion-col>{{ nutrients[4].value }}</ion-col>
+        </ion-row>
 
-        
-          <ion-row>
-            <ion-col>Vitamin D</ion-col>
-            <ion-col>{{ nutrients[8].value }}</ion-col>
-          </ion-row>
-        
 
-        
-          <ion-row>
-            <ion-col>Zinc</ion-col>
-            <ion-col>{{ nutrients[9].value }}</ion-col>
-          </ion-row>
-        
+
+        <ion-row>
+          <ion-col>Vitamin D</ion-col>
+          <ion-col>{{ nutrients[5].value }}</ion-col>
+        </ion-row>
+
+
+
+        <ion-row>
+          <ion-col>Vitamin C</ion-col>
+          <ion-col>{{ nutrients[6].value }}</ion-col>
+        </ion-row>
+
+
+
+        <ion-row>
+          <ion-col>Vitamin E</ion-col>
+          <ion-col>{{ nutrients[7].value }}</ion-col>
+        </ion-row>
+
       </ion-list>
     </ion-card-content>
   </ion-card>
