--- a/src/app/photo/photo.page.html
+++ b/src/app/photo/photo.page.html
@@ -50,45 +50,38 @@
     <ion-card-content *ngIf="fullNutrients.length > 0">
       <ion-list>
         <ion-row>
-          <ion-col size="6">Calcium</ion-col>
+          <ion-col size="6">Protein</ion-col>
           <ion-col size="3">{{ fullNutrients[0][0].value }}</ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="6">Copper</ion-col>
+          <ion-col size="6">Fat</ion-col>
           <ion-col size="3">{{ fullNutrients[0][1].value }}</ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="6">Folic Acid</ion-col>
+          <ion-col size="6">Calories</ion-col>
           <ion-col size="3">{{ fullNutrients[0][2].value }}</ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="6">Iron</ion-col>
+          <ion-col size="6">Zinc</ion-col>
           <ion-col size="3">{{ fullNutrients[0][3].value }}</ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="6">Magnesium</ion-col>
+          <ion-col size="6">Vitamin A</ion-col>
           <ion-col size="3">{{ fullNutrients[0][4].value }}</ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="6">Niacin</ion-col>
+          <ion-col size="6">Vitamin D</ion-col>
           <ion-col size="3">{{ fullNutrients[0][5].value }}</ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="6">Vitamin A</ion-col>
+          <ion-col size="6">Vitamin C</ion-col>
           <ion-col size="3">{{ fullNutrients[0][6].value }}</ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="6">Vitamin C</ion-col>
+          <ion-col size="6">Vitamin E</ion-col>
           <ion-col size="3">{{ fullNutrients[0][7].value }}</ion-col>
         </ion-row>
-        <ion-row>
-          <ion-col size="6">Vitamin D</ion-col>
-          <ion-col size="3">{{ fullNutrients[0][8].value }}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="6">Zinc</ion-col>
-          <ion-col size="3">{{ fullNutrients[0][9].value }}</ion-col>
-        </ion-row>
+        
       </ion-list>
     </ion-card-content>
   </ion-card>
