--- a/src/app/analysis/analysis.page.html
+++ b/src/app/analysis/analysis.page.html
@@ -47,4 +47,12 @@
       </div>
     </div>
   </div>
+  <ion-item>
+    <ion-label>Date</ion-label>
+    <ion-select [(ngModel)]="selectedDate" placeholder="Select Date" required (ionChange)="onChange()">
+      <ion-select-option *ngFor="let dayNutrition of allDaysNutrition" value="{{ dayNutrition.date }}">
+        {{ dayNutrition.date }}
+      </ion-select-option>
+    </ion-select>
+  </ion-item>
 </ion-content>
