--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,13 +11,13 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
+      <ion-img src="https://firebasestorage.googleapis.com/v0/b/njhack-8798c.appspot.com/o/healthy-breakfast_925x.jpg?alt=media&token=6aaae535-8dfa-40cc-9e3b-17a88736d143"></ion-img>
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
+        <ion-card-title>Kids Diet Tracker</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>Please login first and export the menu.</p>
       </ion-card-content>
     </ion-card>
     <ion-list lines="none">
