--- a/src/app/photo/item-modal/item-modal.page.html
+++ b/src/app/photo/item-modal/item-modal.page.html
@@ -16,12 +16,16 @@
           <ion-button (click)="openSelector()">Quantity</ion-button>
         </ion-col>
       </ion-row>
-      <ion-item-divider></ion-item-divider>
+
       <ion-row>
         <ion-col>
-          <ion-label>Unit</ion-label>
-          <ion-input [(ngModel)]="unit" placeholder="Unit"></ion-input>
+          
+          <ion-item>
+            <!-- <ion-label position="floating">Unit</ion-label> -->
+            <ion-input [(ngModel)]="unit" placeholder="Unit"></ion-input>
+          </ion-item>
         </ion-col>
+        
       </ion-row>
       <ion-row no-padding>
         <ion-col size="6">
